# groklexa

./: .gitignore  LICENSE  README.md  generate_earcons.py  generate_fillers.py  pyproject.toml  web_app.py
config/: api_settings.example.json  memory_flair_hacked_local_assistant_3194.db  memory_flair_local_assistant_2590.db  thinking_rag.json
docs/: APPROACH_COMPARISON.md  PLAN.md  VOICE_API_NOTE.md  WEBSOCKET_USAGE.md
groklexa/: __init__.py  xai_voice_websocket.py
lib/: __init__.py
lib/memory_flair/: __init__.py  memory_flair.py
mobile/: SETUP.md  capacitor.config.ts  package.json
mobile/android-overrides/app/src/main/: AndroidManifest.xml.patch
mobile/android-overrides/app/src/main/java/com/groklexa/app/: MainActivity.java
mobile/android-overrides/app/src/main/res/xml/: network_security_config.xml
mobile/www/: index.html
static/openwakeword/: openwakeword_reference.js
static/openwakeword/models/: groklexa.onnx
static/voices/: README.txt
templates/: index.html
tools/: example_websocket.py  generate_cert.sh
