[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["groklexa"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.onnx", "*.mp3"]

[project]
name = "groklexa"
version = "0.1.0"
description = "Voice assistant with wake word detection, powered by XAI Realtime API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "faster-whisper>=1.2.1",
    "flask>=3.1.2",
    "pydub>=0.25.1",
    "pytz>=2024.1",
    "requests>=2.32.5",
    "websockets>=15.0.1",
    "xai-sdk>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

# Future: CLI and mobile app versions
# [project.scripts]
# groklexa = "groklexa.cli:main"
# groklexa-web = "web_app:run"
